# nifty

./: .gitignore  .gitmodules  .swcrc  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  README.md  app.yaml  defs_client_symlink.ts  defs_instance_server_symlink.ts  defs_server_symlink.ts  esbuild.config.mjs  out.js  out.js.map  package-lock.json  package.json  rollit.mjs  rollup.config.js  tailwind.config.js  tsconfig.json
appengine/: .gcloudignore  192.168.40.233-key.pem  192.168.40.233.pem  app.js  app.yaml  data_usage.txt  localhost-key.pem  localhost.pem  package-lock.json  package.json  rollit_appengine.mjs  sheets_credentials.json  statuses_stats.txt
buildit/: Cargo.toml  buildit  rollit.mjs
buildit/src/: common_helperfuncs.rs  core.rs  dist.rs  dist2.rs  helperutils.rs  helperutils_.rs  lazy.rs  main.rs  mediafiles.rs  serverfiles.rs  setinstance.rs  thirdpartyfiles.rs  update_file.rs
buildit/src/dev/: handlefile.rs  media.rs  mod.rs  server.rs  thirdparty.rs  update_file.rs
builditsrc/: Cargo.toml  builditsrc  run_buildit
builditsrc/src/: common_helperfuncs.rs  main.rs
builditsrc/src/dev/: copy_chrome_css_changes.rs  handlefile.rs  media.rs  mod.rs  server.rs  setinstance.rs  thirdparty.rs
client/: .swcrc  app.webmanifest  client_xen  definitions.ts  defs.ts  defs_client.ts  defs_server_symlink.ts  index.css  index.html  main.css  main.ts  main_.css  sw.ts
client_backup/: app.webmanifest  definitions.ts  index.html  main.css  main.ts  main_.css  sw.ts
docs/: nifty_for_aider.md
runlisten/: package-lock.json  package.json  tsconfig.json
server/: .swcrc  (+10 more)
(+281 files in other folders)
