[package]
name = "buildit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = "1.36.0"


minify-js = "0.6.0"
walkdir = "2.3.2"
lazy_static = "1.5.0"
